<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp"
    tools:context="id.apigo.starter.MainActivity">

    <Button
        android:id="@+id/buttonSender"
        android:text="@string/label_sender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonRecipient"
        android:text="@string/label_recipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonTemplate"
        android:text="@string/label_template"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonLog"
        android:text="@string/label_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonSendMessageDirectTemplate"
        android:text="@string/label_send_message_direct_template"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonSendMessageBroadcastTemplate"
        android:text="@string/label_send_message_broadcast_template"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
